[gd_scene load_steps=7 format=2]

[ext_resource path="res://kraxbot_fist.png" type="Texture" id=1]
[ext_resource path="res://Fist.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 500.0

[sub_resource type="Animation" id=2]
resource_name = "deploy"
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "explode"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 15.0

[node name="Fist" type="Node2D" groups=[
"attacks",
]]
script = ExtResource( 2 )

[node name="Detector" type="Area2D" parent="."]
rotation = -0.785398
collision_layer = 4096

[node name="Sprite" type="Sprite" parent="Detector"]
rotation = -0.785398
scale = Vector2( 1, 1 )
z_index = 2
texture = ExtResource( 1 )
hframes = 5
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
z_index = 2
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="Detector"]
anims/deploy = SubResource( 2 )
anims/explode = SubResource( 4 )

[node name="HitCol" type="Area2D" parent="Detector" groups=[
"attacks",
]]
collision_layer = 4096
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector/HitCol" groups=[
"attacks",
]]
z_index = 2
shape = SubResource( 3 )
[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
[connection signal="animation_finished" from="Detector/anim" to="." method="_on_anim_animation_finished"]
[connection signal="area_entered" from="Detector/HitCol" to="." method="_on_HitCol_area_entered"]
